# invenio-modular-deposit-form

./: .buildinfo  .editorconfig  .gitignore  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  VERSION  architecture.html  babel.ini  configuration.html  extending.html  field_components.html  genindex.html  index.html  installation.html  introduction.html  jest.config.js  objects.inv  override-guide.html  overview.html  package.json  pnpm-lock.yaml  pyproject.toml  replacement_field_components.html  run-js-tests.sh  run-tests.sh  search.html  searchindex.js  setup.cfg  setup.py  using.html  validation.html
.doctrees/: architecture.doctree  configuration.doctree  environment.pickle  extending.doctree  field_components.doctree  index.doctree  installation.doctree  introduction.doctree  override-guide.doctree  overview.doctree  replacement_field_components.doctree  using.doctree  validation.doctree
.github/workflows/: js-tests.yml  pypi-publish.yml.bak  tests.yml.bak
.tx/: config
__mocks__/: ShareDraftButton_stub.js  axios.js  i18next_invenio_rdm_records.js  invenio_app_rdm_deposit_config.js  invenio_modular_deposit_form_transformations.js  invenio_vocabularies_stub.js  react-jsx-runtime.js  react-overridable.js
_sources/: configuration.md.txt  extending.md.txt  field_components.md.txt  index.md.txt  installation.md.txt  introduction.md.txt  overview.md.txt  replacement_field_components.md.txt  using.md.txt  validation.md.txt
_static/: documentation_options.js
docs/: Makefile  README.md  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
docs/internal/: README.md  creatibutors-field-flat-person-names.md  names-vocabulary-ingest-sketch.md
docs/source/: architecture.md  conf.py  configuration.md  extending.md  field_components.md  index.md  installation.md  introduction.md  override-guide.md  overview.md  replacement_field_components.md  validation.md
invenio_modular_deposit_form/: __init__.py  config.py  ext.py  views.py  webpack.py  webpack_extras.py
invenio_modular_deposit_form/assets/semantic-ui/css/invenio_modular_deposit_form/: deposit-form.css  deposit_form.css
invenio_modular_deposit_form/assets/semantic-ui/js/invenio_modular_deposit_form/: FieldsContent.jsx  FormLayoutContainer.jsx  FormPage.jsx  FormUIStateManager.jsx  FormUIStateManager.test.jsx  FromUIStateManager.jsx  InnerDepositForm.jsx  RDMDepositForm.js  RDMDepositForm.jsx  babel.config.cjs  buildFormStructure.js  componentsMap.js  componentsRegistry.js  constants.js  fieldWrapperHOC.js  index.js  jest.config.js  package-lock.json  package.json  readableFieldLabels.js  setupTests.js  utils.js  utils.test.js
invenio_modular_deposit_form/assets/semantic-ui/js/invenio_modular_deposit_form/field_components/: CustomField.jsx  CustomFieldInjector.jsx  FieldComponentWrapper.jsx  FormRow.jsx  SectionWrapper.jsx  compound_field_components.js  compound_field_components.jsx  custom_field_components.jsx  field-components.test.js  field_components.js  field_components.jsx  field_components.test.jsx  index.js  override_components.jsx  v14_components.jsx
invenio_modular_deposit_form/assets/semantic-ui/js/invenio_modular_deposit_form/framing_components/: ConfirmNavModal.jsx  FieldsContent.jsx  FormBanner.jsx  FormFooter.jsx  FormFooterRegion.jsx  FormHeader.jsx  FormHeaderRegion.jsx  FormLeftSidebar.jsx  FormPage.jsx  FormPager.jsx  FormRightSidebar.jsx  FormSection.jsx  FormTitle.jsx  FormTitleRegion.jsx  HiddenFieldsBanner.jsx  RecoveryModal.jsx  SectionWrapper.jsx  SpacerColumn.jsx  SubsectionsRenderer.jsx
invenio_modular_deposit_form/assets/semantic-ui/js/invenio_modular_deposit_form/helpers/: FormErrorManager.js  FormErrorManager.test.js  FormSubmissionTransformer.js  FormSubmissionTransformer.test.js  GlobalDndContext.js  SyncFilesCountFromRedux.jsx  buildFormStructure.js  buildFormStructure.test.js  depositFormTitleText.js  formUIStateReducer.js  hiddenSectionErrors.js  names.js  readableFieldLabels.js  severityChecksConfig.js  valuesWithLinkFallbacks.js  valuesWithLinkFallbacks.test.js
invenio_modular_deposit_form/assets/semantic-ui/js/invenio_modular_deposit_form/hooks/: useCurrentFieldMods.js  useCurrentResourceTypeFields.jsx  useCustomFieldSectionName.js  useCustomFieldWidget.js  useFormPageNavigation.jsx  useFormSubmissionTransformer.test.js  useIsInViewport.jsx  useLocalStorageRecovery.jsx  useStickyFooterOverlapFix.jsx
invenio_modular_deposit_form/assets/semantic-ui/less/invenio_modular_deposit_form/: deposit_form.less
invenio_modular_deposit_form/assets/semantic-ui/templates/custom_fields/: ImprintISBNField.js  ImprintPagesField.js  ImprintPlaceField.js  ImprintTitleField.js  JournalISSNField.jsx  JournalIssueField.js  JournalPagesField.jsx  JournalTitleField.jsx  JournalVolumeField.jsx  MeetingIdentifiersField.js
invenio_modular_deposit_form/assets/semantic-ui/translations/invenio_modular_deposit_form/: i18next-scanner.config.js  package.json  pnpm-lock.yaml  translations.pot
invenio_modular_deposit_form/config/: __init__.py  alternate_paged.py  config.py  default.py  zenodo.py
invenio_modular_deposit_form/custom_field_ui/: codemeta_fields.py  imprint_fields.py  journal_fields.py  meeting_fields.py  thesis_fields.py
invenio_modular_deposit_form/custom_fields/: __init__.py  safe_vocabulary.py
invenio_modular_deposit_form/custom_fields/ui/: __init__.py  codemeta_fields.py  journal_fields.py  meeting_fields.py
invenio_modular_deposit_form/filters/: __init__.py  current_user_profile_dict.py  merge_deposit_config.py  previewable_extensions.py
invenio_modular_deposit_form/scripts/: apply_patches.sh
invenio_modular_deposit_form/templates/invenio_modular_deposit_form/: deposit.html
invenio_modular_deposit_form/views/: __init__.py  users_name.py
tests/: conftest.py  test_invenio_modular_deposit_form.py
tests/js/: formik_test_utils.js  redux_store.js  redux_test_utils.js
(+141 files in other folders)
