[build-system]
build-backend = "setuptools.build_meta"
# setuptools>=82 removed pkg_resources; pin until callers use importlib only.
requires = ["babel>2.8", "setuptools>=61,<82", "wheel"]

[project]
name = "invenio-modular-deposit-form"
version = "0.3.4-dev0"
description = "An InvenioRDM extension that adds a more modular and customizable version of the record deposit form"
readme = "README.md"
keywords = ["deposit-form", "extensions", "invenio", "inveniordm", "ui"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mesh Research", email = "scottia4@msu.edu" }]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "invenio-app-rdm[opensearch2]<14",
  # Match parent kcworks-next uv.lock (invenio-records-resources needs >=0.12; 0.10 lacks EDTFLevel2DateString).
  "marshmallow-utils>=0.12",
  "setuptools>=61,<82",
]
optional-dependencies.docs = [
  "furo>=2023",
  "linkify-it-py>=0.2",
  "myst-parser>=2",
  "sphinx>=7",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.3",
  "uc-micro-py>=1",
]
optional-dependencies.tests = [
  "mypy>=1.8",
  "pytest>=7.3.2",
  "pytest-cov>=6.2.1",
  "pytest-invenio>=3.3,<4",
  "pytest-isort>=4",
  "pytest-mock",
  "pytest-mypy>=0.10",
  "pytest-ruff>=0.1",
  "requests-mock",
  "ruff>=0.3",
  "selenium",
]
urls.Homepage = "https://github.com/MESH-Research/invenio-modular-deposit-form"
entry-points."invenio_assets.webpack".invenio_modular_deposit_form_theme = "invenio_modular_deposit_form.webpack:theme"
entry-points."invenio_base.api_finalize_app".invenio_modular_deposit_form = "invenio_modular_deposit_form.ext:api_finalize_app"
entry-points."invenio_base.apps".invenio_modular_deposit_form = "invenio_modular_deposit_form:InvenioModularDepositForm"
entry-points."invenio_base.blueprints".invenio_modular_deposit_form = "invenio_modular_deposit_form.ext:create_blueprint"
entry-points."invenio_base.finalize_app".invenio_modular_deposit_form = "invenio_modular_deposit_form.ext:finalize_app"
entry-points."invenio_i18n.translations".messages = "invenio_modular_deposit_form"

[dependency-groups]
docs = [
  "furo>=2023",
  "linkify-it-py>=0.2",
  "myst-parser>=2",
  "sphinx>=7",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.3",
  "uc-micro-py>=1",
]
tests = [
  "mypy>=1.8",
  "pytest>=7.3.2",
  "pytest-cov>=6.2.1",
  "pytest-invenio>=3.3,<4",
  "pytest-isort>=4",
  "pytest-mock",
  "pytest-mypy>=0.10",
  "pytest-ruff>=0.1",
  "requests-mock",
  "ruff>=0.3",
  "selenium",
]

[tool.setuptools]
package-data.invenio_modular_deposit_form = [
  "assets/**",
  "patches/**",
  "scripts/**",
  "templates/**",
  "translations/**",
]
package-data."*" = ["*.po", "*.pot", "*.mo"]
packages.find.include = ["invenio_modular_deposit_form*"]
packages.find.exclude = ["tests*", "docs*", "scripts*", "node_modules*"]

[tool.uv]
sources.invenio-modular-deposit-form = { path = ".", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
  "**/*.ipynb",                                                  # Exclude Jupyter notebook files
  "app_data",
  "docs",
  "node_modules",
  "scripts",
  "site/kcworks/dependencies/invenio-communities",
  "site/kcworks/dependencies/invenio-group-collections-kcworks",
  "site/kcworks/dependencies/invenio-modular-deposit-form",
  "site/kcworks/dependencies/invenio-modular-detail-page",
  "site/kcworks/dependencies/invenio-rdm-records",
  "site/kcworks/dependencies/invenio-record-importer-kcworks",
  "site/kcworks/dependencies/invenio-remote-api-provisioner",
  "site/kcworks/dependencies/invenio-remote-user-data-kcworks",
  "site/kcworks/dependencies/invenio-stats-dashboard",
  "site/kcworks/dependencies/invenio-vocabularies",
  "site/kcworks/services/search/index_templates",
  "tests/helpers",
]
# temporarily removed C for complexity checks
lint.select = ["B", "D", "DOC", "E", "F", "I", "UP"]
# Now Ruff handles formatting, so enable formatting rules
lint.ignore = [
  "D412", # Missing blank line before closing docstring
  # Keep some warnings disabled
  "W1", # Indentation warnings
  "W2", # Whitespace warnings
  "W3", # Blank line warnings
]
lint.per-file-ignores."__init__.py" = ["D104", "E402", "F401"]
lint.per-file-ignores."tests/api/test_stats.py" = ["C416"]
# Ensure consistent import sorting - explicitly declare tests as first-party
lint.isort.known-first-party = [
  "invenio_stats_dashboard",
  "invenio_record_importer_kcworks",
  "tests",
]
lint.pydocstyle.convention = "google"
lint.preview = true

[tool.isort]
profile = "black"
line-length = 88
verbose = true
multi_line_output = 3                 # Vertical hanging indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true

[tool.check-manifest]
ignore = [
  "* .mo",
  "*.bin",
  "*.gitkeep",
  ".*-requirements.txt",
  ".bzrignore",
  ".DS_Store",
  ".egg-info",
  ".egg-info/*",
  ".gitattributes",
  ".github/*",
  ".gitignore",
  "PKG-INFO",
  "*.lock",
  ".vscode/*",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
follow_imports = "skip"
allow_untyped_globals = true
exclude = ["^tests/"]

[tool.pytest]
ini_options.testpaths = ["tests", "invenio_modular_deposit_form"]
ini_options.addopts = """
--ruff --doctest-modules
--log-cli-level=DEBUG
--ignore=app_data
--ignore=docs
--ignore=node_modules
--ignore=scripts
--ignore=tests/helpers
--cov=invenio_modular_deposit_form
--cov-report=term-missing
"""
ini_options.norecursedirs = []
ini_options.log_cli_level = "DEBUG"
ini_options.isort_show_files = true

[tool.bumpver]
current_version = "0.3.4-dev0"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "Bumping version {old_version} -> {new_version}."
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false
file_patterns."pyproject.toml" = [
  '^version = "{version}"',
  '^current_version = "{version}"',
]
file_patterns."README.md" = ["^Version {version}"]
file_patterns.VERSION = ['^"{version}"']
file_patterns."invenio_modular_deposit_form/__init__.py" = [
  '^__version__ = "{version}"',
]

[tool.babel]
compile_catalog.directory = "invenio_modular_deposit_form/translations/"
compile_catalog.use-fuzzy = true
extract_messages.copyright_holder = "Mesh Research"
extract_messages.msgid_bugs_address = "scottia4@msu.edu"
extract_messages.mapping-file = "babel.ini"
extract_messages.output-file = "invenio_modular_deposit_form/translations/messages.pot"
extract_messages.add-comments = "NOTE"
# input-file = "invenio_modular_deposit_form/translations/messages.pot"
init_catalog.output-dir = "invenio_modular_deposit_form/translations/"
update_catalog.input-file = "invenio_modular_deposit_form/translations/messages.pot"
update_catalog.output-dir = "invenio_modular_deposit_form/translations/"
